# fastapi-auth

./: .gitignore  compose.yml  docker-compose.yml
auth/: Dockerfile  README.md  pyproject.toml
auth/app/: __init__.py  main.py
auth/app/core/: __init__.py  config.py
auth/app/db/: __init__.py  database.py
auth/app/models/: __init__.py  base.py  user.py
auth/app/schemas/: auth.py
